methods.basics.Methods.scala.error
Compilation error:
Methods:13: error: ';' expected but 'if' found.
    }if(x==0 && isCarryingBaggle()){
     ^